--- a/_config.yml
+++ b/_config.yml
@@ -57,7 +57,7 @@ yandex_site_verification :
 
 # Social Sharing
 twitter:
-  username               : &twitter
+  username               : PaulJ_Dougherty
 facebook:
   username               :
   app_id                 :
@@ -174,16 +174,16 @@ kramdown:
 
 # Collections
 collections:
-  teaching:
+  research:
     output: true
     permalink: /:collection/:path/
-  publications:
+  outreach:
     output: true
     permalink: /:collection/:path/
-  portfolio:
+  curriculum vitae:
     output: true
     permalink: /:collection/:path/
-  talks:
+  photos:
     output: true
     permalink: /:collection/:path/
 
