--- a/_config.yml
+++ b/_config.yml
@@ -81,7 +81,7 @@ analytics:
 # Site Author
 author:
   name             : "Paul Dougherty"
-  avatar           : "profile.png"
+  avatar           : "inbu.png"
   bio              : "PhD Candidate University of Wyoming"
   #location         : "Location"
   employer         :
