--- a/_config.yml
+++ b/_config.yml
@@ -56,7 +56,8 @@ alexa_site_verification  :
 yandex_site_verification :
 
 # Social Sharing
-
+# twitter:
+#  username               : PaulJ_Dougherty
 facebook:
   username               :
   app_id                 :
