--- a/_config.yml
+++ b/_config.yml
@@ -86,7 +86,7 @@ author:
   #location         : "Location"
   employer         :
   googlescholar    : "https://scholar.google.com/citations?hl=en&user=3dOBf3oAAAAJ"
-  email            : "pdoughe1@uwyo.edu"
+  email            : "pjdougherty@umass.edu"
   #researchgate     :  # example: "https://www.researchgate.net/profile/yourprofile"
   uri              :
   bitbucket        :
